[package]
name = "prima"
version = "0.2.3"
authors = ["Fishykins <caspar.m.green@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rendering"]
rendering = ["imageproc", "image"]

[dependencies]
vek = "^0.12.0"
num = "^0.3.0"
image = { version = "^0.23.6", optional = true }
imageproc = { version = "^0.22.0", optional = true }
rusttype = "^0.9.2"
obj-rs = "^0.6.1"
ordered-float = "^2.0.0"
rand = "^0.7.3"