[package]
name = "prima"
version = "0.4.0"
authors = ["Fishykins <caspar.m.green@gmail.com>"]
edition = "2021"
description = "Generic 2D library used to handle graph structures, expanding on vek."
keywords = ["vector", "graph", "geometry", "pathing"]
categories = [ "algorithms", "data-structures"]
license = "MIT/Apache-2.0"
repository = "https://github.com/fishykins/prima"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rendering"]
rendering = ["imageproc", "image"]

[dependencies]
image = { version = "^0.23.6", optional = true }
imageproc = { version = "^0.22.0", optional = true }
glam = "0.19.0"
num = "^0.3.0"
rusttype = "^0.9.2"
obj-rs = "^0.6.1"
ordered-float = "^2.8.0"
rand = "^0.7.3"