[package]
name = "prima"
version = "0.6.1"
authors = ["Fishykins <caspar.m.green@gmail.com>"]
edition = "2021"
description = "Simplistic geometry library"
keywords = ["vector", "geometry", "2d", "3d"]
categories = [ "algorithms", "data-structures"]
license = "MIT/Apache-2.0"
repository = "https://github.com/fishykins/prima"
documentation = "https://docs.rs/prima"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["d3"]
d3 = []

[dependencies]
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
glam = { version = "0.20.0", optional = true }

[profile.dev]